@@ -13,6 +13,19 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
         end
       end
 
+      def schema_validations(options = {})
+        column_names = []
+        if options[:only]
+          column_names = options[:only]
+          @schema_validations_column_include = true
+        elsif options[:except]
+          column_names = options[:except]
+          @schema_validations_column_include = false
+        end
+
+        @schema_validations_column_names = Array(column_names).map(&:to_s)
+      end
+
       def allocate_with_schema_validations
         load_schema_validations
         allocate_without_schema_validations
@@ -25,16 +38,17 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
 
       def belongs_to_with_schema_validations(association_id, options = {})
         belongs_to_without_schema_validations(association_id, options)
-
         column = columns_hash[reflections[association_id.to_sym].primary_key_name.to_s]
+
+        return unless validates?(column)
 
         # NOT NULL constraints
         module_eval(
-          "validates_presence_of column.name, :on => :#{column.required_on}, :if => lambda { |record| record.#{association_id}.nil? }"
+          "validates_presence_of :#{column.name}, :on => :#{column.required_on}, :if => lambda { |record| record.#{association_id}.nil? }"
         ) if column.required_on
 
         # UNIQUE constraints
-        validates_uniqueness_of column.name, :scope => column.unique_scope, :allow_nil => true if column.unique?
+        validates_uniqueness_of column.name.to_sym, :scope => column.unique_scope.map(&:to_sym), :allow_nil => true if column.unique?
       end
 
       protected
@@ -44,14 +58,18 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
         return if @schema_validations_loaded || abstract_class? || !base_class? || name.blank? || !table_exists?
         @schema_validations_loaded = true
 
-        content_columns.reject { |column| column.name =~ /^(((created|updated)_(at|on))|position)$/ }.each do |column|
+        content_columns.each do |column|
+          next unless validates?(column)
+
+          name = column.name.to_sym
+
           # Data-type validation
           if column.type == :integer
-            validates_numericality_of column.name, :allow_nil => true, :only_integer => true
+            validates_numericality_of name, :allow_nil => true, :only_integer => true
           elsif column.number?
-            validates_numericality_of column.name, :allow_nil => true
+            validates_numericality_of name, :allow_nil => true
           elsif column.text? && column.limit
-            validates_length_of column.name, :allow_nil => true, :maximum => column.limit
+            validates_length_of name, :allow_nil => true, :maximum => column.limit
           end
 
           # NOT NULL constraints
@@ -59,15 +77,22 @@ module RedHillConsulting::SchemaValidations::ActiveRecord
             # Work-around for a "feature" of the way validates_presence_of handles boolean fields
             # See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334
             if column.type == :boolean
-              validates_inclusion_of column.name, :on => column.required_on, :in => [true, false], :message => ActiveRecord::Errors.default_error_messages[:blank]
+              validates_inclusion_of name, :on => column.required_on, :in => [true, false], :message => ActiveRecord::Errors.default_error_messages[:blank]
             else
-              validates_presence_of column.name, :on => column.required_on
+              validates_presence_of name, :on => column.required_on
             end
           end
 
           # UNIQUE constraints
-          validates_uniqueness_of column.name, :scope => column.unique_scope, :allow_nil => true, :case_sensitive => column.case_sensitive? if column.unique?
+          validates_uniqueness_of name, :scope => column.unique_scope.map(&:to_sym), :allow_nil => true, :case_sensitive => column.case_sensitive? if column.unique?
         end
+      end
+
+      private
+
+      def validates?(column)
+        column.name !~ /^(((created|updated)_(at|on))|position)$/ &&
+          (@schema_validations_column_names.nil? || @schema_validations_column_names.include?(column.name) == @schema_validations_column_include)
       end
     end
   end
